--- a/about/index.html
+++ b/about/index.html
@@ -23,7 +23,82 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <header>
+    <div class="content-wrapper">
+      <figure>
+        <a href="#"><img src="../img/logo.png" alt="unplugged logo"></a>
+      </figure>
+        <div class="header-divider"></div>
+        <nav>
+             <ul>
+                 <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
+                 <li><a href="index.html">About</a></li>
+             </ul>
+        </nav>
+    </div>
+</header>
+
+<main>
+
+  <section class="mission">
+      <div class="content-wrapper">
+            <h2>Our mission - we want to make you the team you always wanted to be.</h12>
+          <div class="mission-content">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Arcu felis bibendum ut tristique et egestas quis. Proin libero nunc consequat interdum varius. A iaculis at erat pellentesque.</p>
+                <p>Arcu felis bibendum ut tristique et egestas quis. Proin libero nunc consequat interdum varius. A iaculis at erat pellentesque.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Arcu felis bibendum ut tristique et egestas quis. Proin libero nunc consequat interdum varius. A iaculis at erat pellentesque.</p>
+          </div>
+      </div> <!-- mission content wrapper ends -->
+  </section> <!-- contact-info -->
+
+  <section class="map">
+      <figure>
+      </figure>
+  </section>
+
+  <section class="contact-section">
+      <div class="content-wrapper">
+          <h2>Contact us because you all need this.</h2>
+            <address class="contact-content">
+              <div>
+                  <h4>General information</h4>
+                  <p>333 Main St, Lake Geneva, WI 53147<br>
+                    555-555-5555<br>
+                    hello@unplugged.com</p>
+                </div>
+                <div>
+                  <h4>Chat with a facilitator</h4>
+                  <p>555-555-5556<br>
+                    facilitator@unplugged.com</p>
+                </div>
+          </address>
+        </div>
+  </section>
+</main>
+
+<footer>
+  <div class="content-wrapper">
+      <div class="footer-content">
+        <address class="contact">
+          <h4>Contact</h4>
+            <p>555-555-5555<br>
+            hello@unplugged.com</p>
+        </address>
+      <div class="social">
+          <h4>Social</h4>
+              <div class="social-icons">
+                  <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
+                  <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
+                  <p><a href="https://www.instagram.com/yoursite" target=">_blank"></a></p>
+              </div>
+          </div>
+      </div> <!-- footer content ends -->
+  </div> <!--footer content-wrapper ends-->
+
+  <div class="copyright">
+    <p>Copyright 2019 | Skillcrush</p>
+  </div>
+</footer>
+
   <script src="../js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="../js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
