--- a/index.html
+++ b/index.html
@@ -115,15 +115,15 @@
                   <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
                   <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
                   <p><a href="https://www.instagram.com/yoursite" target=">_blank"></a></p>
+                </div>
               </div>
+          </div> <!-- footer content ends -->
+        </div>
+      <!--footer content-wrapper ends-->
+          <div class="copyright">
+              <p>Copyright 2018 | Unplugged</p>
           </div>
-      </div> <!-- footer content ends -->
-  </div> <!--footer content-wrapper ends-->
-
-  <div class="copyright">
-    <p>Copyright 2019 | Skillcrush</p>
-  </div>
-</footer>
+  </footer>
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
