--- a/about/index.html
+++ b/about/index.html
@@ -15,6 +15,10 @@
   <link rel="stylesheet" href="../css/main.css">
 
   <meta name="theme-color" content="#fafafa">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+
 </head>
 
 <body>
@@ -44,8 +48,19 @@
       <div class="content-wrapper">
             <h2>Our mission - we want to make you the team you always wanted to be.</h12>
           <div class="mission-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Arcu felis bibendum ut tristique et egestas quis. Proin libero nunc consequat interdum varius. A iaculis at erat pellentesque.</p>
-                <p>Arcu felis bibendum ut tristique et egestas quis. Proin libero nunc consequat interdum varius. A iaculis at erat pellentesque.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Arcu felis bibendum ut tristique et egestas quis. Proin libero nunc consequat interdum varius. A iaculis at erat pellentesque.</p>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                  incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing
+                   elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Arcu felis bibendum
+                   ut tristique et egestas quis. Proin libero nunc consequat interdum varius. A iaculis at erat
+                   pellentesque.
+                 </p>
+                 <p>
+                  Arcu felis bibendum ut tristique et egestas quis. Proin libero nunc consequat interdum varius.
+                  A iaculis at erat pellentesque.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                  eiusmod tempor incididunt ut labore et dolore magna aliqua. Arcu felis bibendum ut tristique et
+                   egestas quis. Proin libero nunc consequat interdum varius. A iaculis at erat pellentesque.
+                 </p>
           </div>
       </div> <!-- mission content wrapper ends -->
   </section> <!-- contact-info -->
