--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Unplugged</title>
+  <title>Unplugged | Home</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -96,7 +96,9 @@
         <article>
           <div>
           <h3>LaCrue Bottling Co. October 2018</h3>
-            <img src="" alt="team photo">
+          <figure>
+            <img src="img/group-image.jpg" alt="team photo">
+          </figure>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus eu sem rutrum, accumsan neque vel, posuere lacus. Proin congue rutrum sapien, non consectetur nibh dignissim vitae. Etiam nec massa at eros semper scelerisque. Sed eu ex nisi. Curabitur sollicitudin rhoncus gravida.</p>
           </div>
       </article>
