--- a/about/index.html
+++ b/about/index.html
@@ -67,6 +67,7 @@
 
   <section class="map">
       <figure>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12099.77712251043!2d-74.00105394680894!3d40.697224782667874!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a37d65ca88f%3A0xcb21942a1650b112!2s100+Clark+St%2C+Brooklyn%2C+NY+11201%2C+USA!5e0!3m2!1sen!2snl!4v1551300906001" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
       </figure>
   </section>
 
