--- a/about/index.html
+++ b/about/index.html
@@ -53,15 +53,12 @@
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                   incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing
-                   elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Arcu felis bibendum
-                   ut tristique et egestas quis. Proin libero nunc consequat interdum varius. A iaculis at erat
-                   pellentesque.
+                   elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                  </p>
                  <p>
                   Arcu felis bibendum ut tristique et egestas quis. Proin libero nunc consequat interdum varius.
                   A iaculis at erat pellentesque.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                  eiusmod tempor incididunt ut labore et dolore magna aliqua. Arcu felis bibendum ut tristique et
-                   egestas quis. Proin libero nunc consequat interdum varius. A iaculis at erat pellentesque.
+                  eiusmod tempor incididunt ut labore et dolore magna aliqua.
                  </p>
           </div>
       </div> <!-- mission content wrapper ends -->
