--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
   <header>
     <div class="content-wrapper">
       <figure>
-        <a href="#"><img src="img/logo.png" alt="unplugged logo"></a>
+        <a href="#">
+          <img src="img/logo.png" alt="unplugged logo"></a>
       </figure>
         <div class="header-divider"></div>
         <nav>
@@ -65,7 +66,7 @@
     </div>
   </aside>
   <section class="features">
-      <h3>Have the work week you always dreamed of — without the bad wifi.</h3>
+      <h2>Have the work week you always dreamed of — without the bad wifi.</h2>
       <article>
         <i class="fas fa-campground"></i>
         <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
@@ -97,11 +98,13 @@
       <h2>Be a better team in 5 days, like these.</h2>
         <article>
           <div>
-          <h3>LaCrue Bottling Co. October 2018</h3>
-          <figure>
-            <img src="img/group-image.jpg" alt="team photo">
-          </figure>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus eu sem rutrum, accumsan neque vel, posuere lacus. Proin congue rutrum sapien, non consectetur nibh dignissim vitae. Etiam nec massa at eros semper scelerisque. Sed eu ex nisi. Curabitur sollicitudin rhoncus gravida.</p>
+            <figure>
+                <img src="img/group-image.jpg" alt="team photo">
+            </figure>
+          </div>
+          <div>
+            <h3>LaCrue Bottling Co. October 2018</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus eu sem rutrum, accumsan neque vel, posuere lacus. Proin congue rutrum sapien, non consectetur nibh dignissim vitae. Etiam nec massa at eros semper scelerisque. Sed eu ex nisi. Curabitur sollicitudin rhoncus gravida.</p>
           </div>
       </article>
   </div>
